--- a/articles/healthcare-apis/azure-api-for-fhir/toc.yml
+++ b/articles/healthcare-apis/azure-api-for-fhir/toc.yml
@@ -59,13 +59,13 @@ items:
           - name: Interoperabilidad del sistema de administración de contenido e introducción a la regla de acceso de pacientes
             href: centers-for-medicare-tutorial-introduction.md
           - name: Guía de implementación de CARIN para Blue Button
-            href: ../fhir/carin-implementation-guide-blue-button-tutorial.md
+            href: carin-implementation-guide-blue-button-tutorial.md
           - name: Da Vinci Drug Formulary
-            href: ../fhir/davinci-drug-formulary-tutorial.md
+            href: davinci-drug-formulary-tutorial.md
           - name: Da Vinci PDex
-            href: ../fhir/davinci-pdex-tutorial.md
+            href: davinci-pdex-tutorial.md
           - name: Da Vinci Plan Net
-            href: ../fhir/davinci-plan-net.md
+            href: davinci-plan-net.md
   - name: Guías paso a paso
     expanded: true
     items:
